--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "antd",
-  "version": "5.2.2",
+  "name": "@pf-ui/pf-ui-react",
+  "version": "0.0.1",
   "description": "An enterprise-class UI design language and React components implementation",
-  "title": "Ant Design",
+  "title": "pf-ui-react",
   "keywords": [
     "ant",
     "component",
@@ -14,22 +14,11 @@
     "react-component",
     "ui"
   ],
-  "homepage": "https://ant.design",
-  "bugs": {
-    "url": "https://github.com/ant-design/ant-design/issues"
-  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ant-design/ant-design"
+    "url": "git+http://gitlab.wowjoy.com/platform/front-npm/pf-ui-react.git"
   },
   "license": "MIT",
-  "contributors": [
-    "ant"
-  ],
-  "funding": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/ant-design"
-  },
   "files": [
     "dist",
     "es",
@@ -47,7 +36,7 @@
     "prepare": "husky install",
     "api-collection": "antd-tools run api-collection",
     "authors": "node ./scripts/generate-authors",
-    "build": "npm run compile && NODE_OPTIONS='--max-old-space-size=4096' npm run dist",
+    "build": "npm run compile && cross-env NODE_OPTIONS='--max-old-space-size=4096' npm run dist",
     "size-limit": "size-limit",
     "check-commit": "node ./scripts/check-commit",
     "check-ts-demo": "node ./scripts/check-ts-demo",
@@ -113,6 +102,7 @@
     "@ant-design/react-slick": "~1.0.0",
     "@babel/runtime": "^7.18.3",
     "@ctrl/tinycolor": "^3.6.0",
+    "@pf-ui/pf-icons-react": "^1.1.30",
     "@rc-component/mutate-observer": "^1.0.0",
     "@rc-component/tour": "~1.6.0",
     "classnames": "^2.2.6",
@@ -291,6 +281,7 @@
     "react-dom": ">=16.9.0"
   },
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
   "size-limit": [
