--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pf-ui/pf-ui-react",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "An enterprise-class UI design language and React components implementation",
   "title": "pf-ui-react",
   "keywords": [
@@ -102,7 +102,7 @@
     "@ant-design/react-slick": "~1.0.0",
     "@babel/runtime": "^7.18.3",
     "@ctrl/tinycolor": "^3.6.0",
-    "@pf-ui/pf-icons-react": "^1.1.30",
+    "@pf-ui/pf-icons-react": "1.1.30",
     "@rc-component/mutate-observer": "^1.0.0",
     "@rc-component/tour": "~1.6.0",
     "classnames": "^2.2.6",
@@ -123,7 +123,7 @@
     "rc-menu": "~9.8.2",
     "rc-motion": "^2.6.1",
     "rc-notification": "~5.0.0",
-    "rc-pagination": "~3.2.0",
+    "rc-pagination": "npm:@pf-ui/rc-pagination@^3.2.3",
     "rc-picker": "~3.1.1",
     "rc-progress": "~3.4.1",
     "rc-rate": "~2.9.0",
